// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph does not render dropCap when first children is not plain text 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

<p
    class="emotion-0"
  >
    <b>
      paragraph
    </b>
     component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders Paragraph with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

<p
    class="emotion-0"
  >
    paragraph component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders empty Paragraph with dropCap without crashing  1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

.emotion-1 {
  margin: 0 0.15em 0 0;
  float: left;
  margin-top: 4px;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-size: 5.625em;
    line-height: 0.85;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-size: 5.875em;
    line-height: 0.85;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-size: 6em;
    line-height: 0.85;
  }
}

.emotion-1 svg {
  fill: #0A0A0A;
}

.emotion-2 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<p
    class="emotion-0"
  >
    <span
      aria-hidden="true"
    >
      <span
        class="emotion-1"
      >
        p
      </span>
      aragraph 
    </span>
    <span
      class="emotion-2"
    >
      paragraph
    </span>
    component
  </p>
</DocumentFragment>
`;

exports[`Paragraph renders with drop cap and complex children 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #2E2E2E;
}

.emotion-1 {
  margin: 0 0.15em 0 0;
  float: left;
  margin-top: 4px;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    font-size: 5.625em;
    line-height: 0.85;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-1 {
    font-size: 5.875em;
    line-height: 0.85;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-1 {
    font-size: 6em;
    line-height: 0.85;
  }
}

.emotion-1 svg {
  fill: #0A0A0A;
}

.emotion-2 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<p
    class="emotion-0"
  >
    <span
      aria-hidden="true"
    >
      <span
        class="emotion-1"
      >
        p
      </span>
      aragraph 
    </span>
    <span
      class="emotion-2"
    >
      paragraph
    </span>
    <b>
      component
    </b>
     with 
    <a
      href="/"
    >
      link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Subscript renders Subscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sub
    class="emotion-0"
  >
    subscript component
  </sub>
</DocumentFragment>
`;

exports[`Superscript renders Superscript 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 80%;
}

<sup
    class="emotion-0"
  >
    superscript component
  </sup>
</DocumentFragment>
`;
